--- a/index.html
+++ b/index.html
@@ -1053,6 +1053,38 @@
                 navigateTo('dashboard');
             }
         }
+        // --- PERSISTANCE ---
+        function saveProgress() {
+            localStorage.setItem('bountyAcademyProgress', JSON.stringify({
+                xp: appState.xp,
+                completedModules: appState.completedModules,
+                raceStock: appState.raceStock,
+                raceUserMoney: appState.raceUserMoney,
+                raceInventory: appState.raceInventory
+            }));
+        }
+
+        function loadSavedProgress() {
+            const saved = localStorage.getItem('bountyAcademyProgress');
+            if (saved) {
+                const progress = JSON.parse(saved);
+                appState.xp = progress.xp || 0;
+                appState.completedModules = progress.completedModules || [];
+                appState.raceStock = progress.raceStock || 5;
+                appState.raceUserMoney = progress.raceUserMoney || 1000;
+                appState.raceInventory = progress.raceInventory || 0;
+            }
+        }
+
+        // --- ROUTING ---
+        function handleInitialRoute() {
+            const hash = window.location.hash.substring(1);
+            if (hash && views[hash]) {
+                navigateTo(hash);
+            } else {
+                navigateTo('dashboard');
+            }
+        }
 
         // --- INITIALISATION UNIQUE ---
         (function initApp() {
@@ -1082,16 +1114,6 @@
     </script>
 </body>
 </html>
-                `;
-            },
-
-
-
-
-
-
-
-
 
 
 
