--- a/index.html
+++ b/index.html
@@ -1738,3 +1738,65 @@
             }
         })();
     </script>
+               // --- PERSISTANCE ---
+        function saveProgress() {
+            localStorage.setItem('bountyAcademyProgress', JSON.stringify({
+                xp: appState.xp,
+                completedModules: appState.completedModules,
+                raceStock: appState.raceStock,
+                raceUserMoney: appState.raceUserMoney,
+                raceInventory: appState.raceInventory
+            }));
+        }
+
+        function loadSavedProgress() {
+            const saved = localStorage.getItem('bountyAcademyProgress');
+            if (saved) {
+                const progress = JSON.parse(saved);
+                appState.xp = progress.xp || 0;
+                appState.completedModules = progress.completedModules || [];
+                appState.raceStock = progress.raceStock || 5;
+                appState.raceUserMoney = progress.raceUserMoney || 1000;
+                appState.raceInventory = progress.raceInventory || 0;
+            }
+        }
+
+        // --- ROUTING ---
+        function handleInitialRoute() {
+            const hash = window.location.hash.substring(1);
+            if (hash && views[hash]) {
+                navigateTo(hash);
+            } else {
+                navigateTo('dashboard');
+            }
+        }
+
+        // --- INITIALISATION UNIQUE ---
+        (function initApp() {
+            console.log("🚀 Lancement de BountyAcademy...");
+            try {
+                renderNavButtons();
+                updateXPBar();
+                loadSavedProgress();
+                handleInitialRoute();
+                window.addEventListener('popstate', function(event) {
+                    if (event.state && event.state.view) {
+                        navigateTo(event.state.view);
+                    }
+                });
+                console.log("✅ Application initialisée avec succès");
+            } catch (error) {
+                console.error("❌ Erreur d'initialisation:", error);
+                document.getElementById('content-area').innerHTML = `
+                    <div style="text-align:center; padding:2rem;">
+                        <h2>Erreur de chargement</h2>
+                        <p>Veuillez recharger la page</p>
+                        <button onclick="window.location.reload()" class="vulnerable-btn">Recharger</button>
+                    </div>
+                `;
+            }
+        })();
+       
+    </script>
+</body>
+</html>
