--- a/index.html
+++ b/index.html
@@ -1169,6 +1169,29 @@
             }
         }
 
+            // --- PERSISTANCE ---
+        function saveProgress() {
+            localStorage.setItem('bountyAcademyProgress', JSON.stringify({
+                xp: appState.xp,
+                completedModules: appState.completedModules,
+                raceStock: appState.raceStock,
+                raceUserMoney: appState.raceUserMoney,
+                raceInventory: appState.raceInventory
+            }));
+        }
+
+        function loadSavedProgress() {
+            const saved = localStorage.getItem('bountyAcademyProgress');
+            if (saved) {
+                const progress = JSON.parse(saved);
+                appState.xp = progress.xp || 0;
+                appState.completedModules = progress.completedModules || [];
+                appState.raceStock = progress.raceStock || 5;
+                appState.raceUserMoney = progress.raceUserMoney || 1000;
+                appState.raceInventory = progress.raceInventory || 0;
+            }
+        }
+
         // --- INITIALISATION UNIQUE ---
         (function initApp() {
             console.log("🚀 Lancement de BountyAcademy...");
@@ -1199,7 +1222,7 @@
                 `;
             }
         })();
-    </script>
+                </script>
                         <
 </body>
 </html>
